--- a/resources/css/light-theme.css
+++ b/resources/css/light-theme.css
@@ -7,7 +7,7 @@
 html {
     margin: 0;
     padding: 0;
-    font-family: 'Neucha', cursive;
+    font-family: 'Montserrat', sans-serif;
     font-size: 16px;
 }
 
@@ -27,6 +27,7 @@ header {
     border-bottom: 2px solid black;
     display: flex;
 }
+
 .initials {
     display: flex;
     flex-flow: row nowrap;
@@ -38,6 +39,7 @@ header {
     padding: 3px;
     margin-left: 15px;
     vertical-align: middle;
+    font-weight: 900;
 }
 
 nav {
@@ -52,24 +54,25 @@ nav ul {
     flex-flow: row nowrap;
     width: 100%;
     align-items: stretch;
-    
 }
 
 nav ul li {
     padding: 3px;
     margin: 0 15px;
     vertical-align: middle;
+    font-weight: 600;
 }
-
 
 .theme-toggle {
     display: flex;
-    justify-content: center;
+    justify-content: flex-end;
     width: 100%;
     flex-wrap: wrap;
     align-content: center;
     padding: 5px 0;
+    font-size: 1.25rem;
 }
+
 
 /* SWITCH (from w3schools.com) */
 
@@ -82,17 +85,22 @@ nav ul li {
     display: inline-block;
     width: 50px;
     height: 25px;
-  }
-  
-        /* Hide default HTML checkbox */
-  .switch input {
+    margin-right: 20px;
+}
+
+
+/* Hide default HTML checkbox */
+
+.switch input {
     opacity: 0;
     width: 0;
     height: 0;
-  }
-  
-        /* The slider */
-  .slider {
+}
+
+
+/* The slider */
+
+.slider {
     position: absolute;
     cursor: pointer;
     top: 0;
@@ -102,9 +110,9 @@ nav ul li {
     background-color: black;
     -webkit-transition: .4s;
     transition: .4s;
-  }
-  
-  .slider:before {
+}
+
+.slider:before {
     position: absolute;
     content: "";
     height: 17px;
@@ -114,27 +122,294 @@ nav ul li {
     background-color: white;
     -webkit-transition: .4s;
     transition: .4s;
-  }
-  
-  input:checked + .slider {
-    background-color: #2196F3;
-  }
-  
-  input:focus + .slider {
-    box-shadow: 0 0 1px #2196F3;
-  }
-  
-  input:checked + .slider:before {
+}
+
+input:checked+.slider {
+    background-color: white;
+}
+
+input:focus+.slider {
+    box-shadow: 0 0 1px white;
+}
+
+input:checked+.slider:before {
     -webkit-transform: translateX(26px);
     -ms-transform: translateX(26px);
     transform: translateX(26px);
-  }
-  
-        /* Rounded sliders */
-  .slider.round {
+}
+
+
+/* Rounded sliders */
+
+.slider.round {
     border-radius: 25px;
-  }
-  
-  .slider.round:before {
+}
+
+.slider.round:before {
     border-radius: 50%;
-  }
+}
+
+
+/* HERO SECTION */
+
+
+/* .hero {
+    width: 100%;
+    height: auto;
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    flex-flow: row wrap;
+    margin-top: 30px;
+}
+
+.hero-container {
+    height: 80%;
+    background-color: #2a2a2a;
+    align-self: center;
+    display: flex;
+    justify-content: center;
+}
+
+.a,
+.d {
+    width: 60%;
+}
+
+.b,
+.c {
+    opacity: 0;
+    width: 40%;
+}
+
+.a {
+    border-top-right-radius: 3rem;
+}
+
+.d {
+    border-bottom-left-radius: 3rem;
+    border-top-left-radius: -3rem;
+}
+
+.hero-title {
+    color: white;
+    height: auto;
+    width: fit-content;
+    display: inline-flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    align-content: center;
+
+}
+
+.hero-title h1 {
+    font-size: 6rem;
+    margin: 20px;
+
+    font-weight: 400;
+} */
+
+main {
+    display: grid;
+    grid-template-columns: 4fr 1fr;
+    grid-template-rows: auto;
+    column-gap: 30px;
+}
+
+
+/* MAIN BAR Section */
+
+.main_column {
+    grid-column: 1 / 2;
+    justify-content: flex-start;
+    display: inline-flex;
+    flex-flow: column nowrap;
+    width: 100%;
+    align-items: center;
+    border-right: 2px solid black;
+}
+
+.main_header {
+    display: inline-flex;
+    flex-flow: column nowrap;
+    justify-content: flex-start;
+    margin-top: 30px;
+    text-align: center;
+    width: 80%;
+}
+
+.main_header h1 {
+    font-size: 2.5rem;
+    /* font-style: italic; */
+    padding-bottom: 1.25rem;
+    /* width: 90%; */
+    border-bottom: 2px solid black;
+    margin-bottom: 20px;
+}
+
+.main_header h2 {
+    /* font-size: 2.5rem; */
+    /* font-style: italic; */
+    /* padding-bottom: 1.25rem; */
+    /* width: 90%; */
+    font-weight: 500;
+    /* border */
+    margin-bottom: 20px;
+}
+
+.main_opener {
+    width: 80%;
+    margin: 0 auto;
+    text-align: justify;
+}
+
+.main_opener p {
+    line-height: 1.5;
+    /* text-indent: 30px; */
+    font-size: 1.2rem;
+    padding-bottom: 20px;
+    background-color: whitesmoke;
+    padding: 20px;
+    font-weight: 400;
+}
+
+/* PROJECTS SECTION */
+
+.projects_header {
+    width: 80%;
+    text-align: center;
+    margin-top: 20px;
+    padding: 20px;
+    border-top: 2px solid black;
+}
+
+.projects_header h2 {
+    font-size: 2rem;
+}
+
+.projects_container {
+    display: inline-flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    width: 95%;
+    background-color: whitesmoke;
+}
+
+.project {
+    display: flex;
+    flex-flow: column wrap;
+    width: fit-content;
+    align-items: center;
+    justify-content: space-around;
+    min-width: 150px;
+    max-width: 400px;
+    text-align: center;
+    margin: 10px 10px 20px 10px;
+    
+}
+
+.project h3 {
+    font-size: 1.25rem;
+    margin: 5px;
+}
+
+.project h4 {
+    font-weight: 500;
+    font-style: italic;
+    margin-bottom: 10px;
+}
+
+.project p {
+    margin-bottom: 10px;
+}
+
+.project img {
+    max-width: 100%;
+    min-width: 175px;
+    border-radius: 5%;
+    border: 2px solid black;
+    ;
+}
+
+.project img:hover {
+    opacity: 0.8;
+}
+
+/* SIDEBAR Section */
+
+.sidebar {
+    width: 100%;
+    display: inline-flex;
+    justify-content: flex-start;
+    flex-direction: column;
+    grid-column: 2 / 3;
+    padding-right: 30px;
+    /* position: sticky; */
+    position: sticky;
+    top: 5px;
+
+}
+
+.sidebar-container {
+    width: auto;
+    height: auto;
+    position: sticky;
+    top: 5px;
+    margin-bottom: 20px;
+}
+
+.img_container {
+    width: auto;
+    height: auto;
+    display: flex;
+    justify-content: center;
+    flex-shrink: 1;
+}
+
+.sidebar .img_container img {
+    max-width: 277px;
+    max-height: 277px;
+    border-radius: 50%;
+    /* position: relative;
+    right: 150px; */
+    margin-top: 30px;
+    flex-shrink: 1;
+}
+
+.sidebar .headshot_info {
+    text-align: center;
+}
+
+.sidebar .headshot_info h2 {
+    font-size: 2rem;
+    margin-top: 10px;
+}
+
+.sidebar .headshot_info h3 {
+    font-size: 1.25rem;
+    margin: 10px 0 15px 0;
+    font-style: italic;
+    font-weight: 500;
+}
+
+.sidebar figure {
+    margin-top: 15px;
+    height: auto;
+    width: auto;
+}
+
+.sidebar figure img {
+    width: 40%;
+}
+
+
+/* FOOTER */
+
+footer {
+    width: 100%;
+    height: 200px;
+    content: "";
+    margin-top: 35px;
+    border-top: 2px solid black;
+}
