--- a/resources/css/dark-theme_about.css
+++ b/resources/css/dark-theme_about.css
@@ -266,13 +266,13 @@ main {
     width: 100%;
     align-items: center;
     /* background-color: whitesmoke; */
+    padding: 30px 0;
 }
 
 .main_header {
     display: inline-flex;
     flex-flow: column nowrap;
     justify-content: flex-start;
-    margin-top: 30px;
     text-align: center;
     width: 80%;
 }
@@ -293,6 +293,9 @@ main {
     width: 100%;
     margin: 0 auto;
     text-align: justify;
+    display: flex;
+    flex-flow: column wrap;
+    align-items: center;
 }
 
 .main_opener p {
@@ -302,6 +305,17 @@ main {
     /* background-color: whitesmoke; */
     padding: 20px;
     font-weight: 400;
+}
+
+.main_opener img {
+    min-width: 200px;
+    max-width: 50%;
+    margin: 30px auto 10px auto;
+}
+
+.main-opener figcaption {
+    text-align: center;
+    font-weight: bold;
 }
 
 
