--- a/resources/css/light-theme.css
+++ b/resources/css/light-theme.css
@@ -11,10 +11,15 @@ html {
     font-size: 16px;
 }
 
+@media only screen and (max-width: 690px) {
+    html {
+        font-size: 12px;
+    }
+}
+
 header {
     height: auto;
     width: 100%;
-    /* border-bottom: 2px solid black; */
     display: flex;
     flex-direction: column;
     flex-wrap: nowrap;
@@ -22,10 +27,17 @@ header {
     font-size: 1.5rem;
 }
 
+a:link,
+a:visited {
+    color: blue;
+}
+
 .nav-container {
     width: 100%;
-    border-bottom: 2px solid black;
     display: flex;
+    position: fixed;
+    background-color: white;
+    z-index: 1000;
 }
 
 .initials {
@@ -42,9 +54,17 @@ header {
     font-weight: 900;
 }
 
+.initials a:link {
+    text-decoration: none;
+    color: black;
+}
+
+.initials a:visited {
+    color: black;
+}
+
 nav {
     width: 50%;
-    /* font-size: 1.5rem; */
 }
 
 nav ul {
@@ -63,6 +83,59 @@ nav ul li {
     font-weight: 600;
 }
 
+nav ul li a:link,
+nav ul li a:visited {
+    text-decoration: none;
+    color: black;
+}
+
+nav ul li a:hover {
+    text-decoration: underline;
+}
+
+@media only screen and (max-width: 580px) {
+    .initials {
+        width: 100%;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+    .nav-container {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        /* position: fixed;
+        background-color: white; */
+        z-index: 1000;
+    }
+    nav {
+        width: 100%;
+    }
+    nav ul {
+        list-style: none;
+        display: flex;
+        justify-content: center;
+        flex-flow: column wrap;
+        width: 100%;
+        /* align-items: stretch; */
+        align-content: center;
+    }
+    nav ul li {
+        padding: 3px;
+        margin: 0 0;
+        vertical-align: middle;
+        font-weight: 600;
+        width: 100%;
+        text-align: center;
+        border-top: 1px solid black;
+    }
+    nav ul li:last-of-type {
+        border-bottom: 1px solid black;
+    }
+}
+
+
+/* ---------------------------------------- */
+
 .theme-toggle {
     display: flex;
     justify-content: flex-end;
@@ -71,6 +144,15 @@ nav ul li {
     align-content: center;
     padding: 5px 0;
     font-size: 1.25rem;
+    position: relative;
+    top: 37px;
+}
+
+@media only screen and (max-width: 580px) {
+    .theme-toggle {
+        position: relative;
+        top: 116px;
+    }
 }
 
 
@@ -150,83 +232,36 @@ input:checked+.slider:before {
 }
 
 
-/* HERO SECTION */
-
-
-/* .hero {
-    width: 100%;
-    height: auto;
-    display: flex;
-    align-content: center;
-    justify-content: center;
-    flex-flow: row wrap;
-    margin-top: 30px;
-}
-
-.hero-container {
-    height: 80%;
-    background-color: #2a2a2a;
-    align-self: center;
-    display: flex;
-    justify-content: center;
-}
-
-.a,
-.d {
-    width: 60%;
-}
-
-.b,
-.c {
-    opacity: 0;
-    width: 40%;
-}
-
-.a {
-    border-top-right-radius: 3rem;
-}
-
-.d {
-    border-bottom-left-radius: 3rem;
-    border-top-left-radius: -3rem;
-}
-
-.hero-title {
-    color: white;
-    height: auto;
-    width: fit-content;
-    display: inline-flex;
-    flex-flow: row wrap;
-    justify-content: center;
-    align-content: center;
-
-}
-
-.hero-title h1 {
-    font-size: 6rem;
-    margin: 20px;
-
-    font-weight: 400;
-} */
+/* ---------------------------------------- */
 
 main {
     display: grid;
-    grid-template-columns: 4fr 1fr;
+    grid-template-columns: .25fr 4fr 1.5fr;
     grid-template-rows: auto;
-    column-gap: 30px;
+    column-gap: 1.875rem;
+    position: relative;
+    top: 37px;
+}
+
+@media only screen and (max-width: 580px) {
+    main {
+        grid-template-columns: .1fr 4fr .1fr;
+        position: relative;
+        top: 151px;
+    }
 }
 
 
-/* MAIN BAR Section */
+/* _______MAIN BAR Section_______ */
 
 .main_column {
-    grid-column: 1 / 2;
+    grid-column: 2 / 3;
     justify-content: flex-start;
     display: inline-flex;
     flex-flow: column nowrap;
     width: 100%;
     align-items: center;
-    border-right: 2px solid black;
+    background-color: whitesmoke;
 }
 
 .main_header {
@@ -240,32 +275,24 @@ main {
 
 .main_header h1 {
     font-size: 2.5rem;
-    /* font-style: italic; */
     padding-bottom: 1.25rem;
-    /* width: 90%; */
     border-bottom: 2px solid black;
     margin-bottom: 20px;
 }
 
 .main_header h2 {
-    /* font-size: 2.5rem; */
-    /* font-style: italic; */
-    /* padding-bottom: 1.25rem; */
-    /* width: 90%; */
     font-weight: 500;
-    /* border */
     margin-bottom: 20px;
 }
 
 .main_opener {
-    width: 80%;
+    width: 100%;
     margin: 0 auto;
     text-align: justify;
 }
 
 .main_opener p {
     line-height: 1.5;
-    /* text-indent: 30px; */
     font-size: 1.2rem;
     padding-bottom: 20px;
     background-color: whitesmoke;
@@ -273,7 +300,8 @@ main {
     font-weight: 400;
 }
 
-/* PROJECTS SECTION */
+
+/* _______PROJECTS SECTION_______ */
 
 .projects_header {
     width: 80%;
@@ -292,8 +320,9 @@ main {
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-around;
-    width: 95%;
+    width: 100%;
     background-color: whitesmoke;
+    padding: 0 5px;
 }
 
 .project {
@@ -306,7 +335,6 @@ main {
     max-width: 400px;
     text-align: center;
     margin: 10px 10px 20px 10px;
-    
 }
 
 .project h3 {
@@ -326,7 +354,7 @@ main {
 
 .project img {
     max-width: 100%;
-    min-width: 175px;
+    min-width: 150px;
     border-radius: 5%;
     border: 2px solid black;
     ;
@@ -336,44 +364,38 @@ main {
     opacity: 0.8;
 }
 
-/* SIDEBAR Section */
+
+/* _______SIDEBAR Section_______ */
 
 .sidebar {
     width: 100%;
     display: inline-flex;
     justify-content: flex-start;
     flex-direction: column;
-    grid-column: 2 / 3;
-    padding-right: 30px;
-    /* position: sticky; */
-    position: sticky;
-    top: 5px;
-
+    grid-column: 3 / 4;
+    padding-right: 1.875rem;
 }
 
 .sidebar-container {
     width: auto;
     height: auto;
     position: sticky;
-    top: 5px;
+    top: 25px;
     margin-bottom: 20px;
 }
 
 .img_container {
-    width: auto;
-    height: auto;
     display: flex;
     justify-content: center;
     flex-shrink: 1;
+    flex-wrap: wrap;
 }
 
 .sidebar .img_container img {
     max-width: 277px;
-    max-height: 277px;
+    min-width: 0;
     border-radius: 50%;
-    /* position: relative;
-    right: 150px; */
-    margin-top: 30px;
+    margin-top: 1.875rem;
     flex-shrink: 1;
 }
 
@@ -393,6 +415,14 @@ main {
     font-weight: 500;
 }
 
+.logo_container {
+    width: 100%;
+    justify-content: space-evenly;
+    display: inline-flex;
+    flex-wrap: wrap;
+    align-items: center;
+}
+
 .sidebar figure {
     margin-top: 15px;
     height: auto;
@@ -400,11 +430,35 @@ main {
 }
 
 .sidebar figure img {
-    width: 40%;
+    max-width: 100px;
+}
+
+@media only screen and (max-width: 1000px) {
+    .sidebar .img_container img {
+        max-width: 150px;
+    }
+}
+
+@media only screen and (max-width: 580px) {
+    .sidebar {
+        width: 100%;
+        display: inline-flex;
+        justify-content: flex-start;
+        flex-direction: column;
+        grid-column: 2 / 3;
+        padding-right: 30px;
+    }
+    .sidebar-container {
+        width: auto;
+        height: auto;
+        position: relative;
+        /* top: 25px; */
+        margin-bottom: 20px;
+    }
 }
 
 
-/* FOOTER */
+/* _______FOOTER_______ */
 
 footer {
     width: 100%;
@@ -412,4 +466,13 @@ footer {
     content: "";
     margin-top: 35px;
     border-top: 2px solid black;
+    position: relative;
+    top: 37px;
+}
+
+@media only screen and (max-width: 580px) {
+    footer {
+        position: relative;
+        top: 151px;
+    }
 }
